[gd_scene load_steps=18 format=3 uid="uid://tpbf7i61jv2p"]

[ext_resource type="Texture2D" uid="uid://c6kh3e04xoys1" path="res://Assets/Icons/icon26.png" id="1_cdoc6"]
[ext_resource type="Script" path="res://Scripts/Shop/Shop_Menu.gd" id="1_xvh5u"]
[ext_resource type="Texture2D" uid="uid://br6h7514itwa3" path="res://Assets/Icons/icon2.png" id="2_yaahv"]
[ext_resource type="Texture2D" uid="uid://chrl5dn1knwoh" path="res://Assets/Icons/icon24.png" id="3_3po51"]
[ext_resource type="Texture2D" uid="uid://buw6lx2nxbwjg" path="res://Assets/Icons/icon32.png" id="4_6akw6"]
[ext_resource type="Texture2D" uid="uid://dcxj5gkbasqxx" path="res://Assets/Shop.png" id="5_k451g"]
[ext_resource type="Texture2D" uid="uid://dtir5kmhydso1" path="res://Assets/Icons/icon20.png" id="6_dqbkn"]
[ext_resource type="FontFile" uid="uid://do6g4q03tl1gj" path="res://Assets/Fonts/Schr√∂dinger.ttf" id="7_5mu2r"]

[sub_resource type="AtlasTexture" id="AtlasTexture_n5ptp"]
atlas = ExtResource("1_cdoc6")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_8ob8n"]
atlas = ExtResource("2_yaahv")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_hriug"]
atlas = ExtResource("3_3po51")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_c4nkm"]
atlas = ExtResource("4_6akw6")
region = Rect2(0, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_ku1u7"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_n5ptp")
}],
"loop": true,
"name": &"FlashRing",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_8ob8n")
}],
"loop": true,
"name": &"HealthPotion",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_hriug")
}],
"loop": true,
"name": &"Map",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_c4nkm")
}],
"loop": true,
"name": &"Shroom",
"speed": 5.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_rpge8"]
atlas = ExtResource("5_k451g")
region = Rect2(180, 84, 9, 12)

[sub_resource type="SpriteFrames" id="SpriteFrames_v25q5"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_rpge8")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_sx0vu"]
atlas = ExtResource("6_dqbkn")
region = Rect2(0, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_rtyyw"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_sx0vu")
}],
"loop": true,
"name": &"Coin",
"speed": 5.0
}]

[node name="ShopMenu" type="StaticBody2D"]
position = Vector2(-54, -57)
scale = Vector2(2, 2)
script = ExtResource("1_xvh5u")

[node name="ColorRect" type="ColorRect" parent="."]
offset_right = 60.0
offset_bottom = 28.0
color = Color(0.158472, 0.158472, 0.158472, 0.898039)
metadata/_edit_use_anchors_ = true

[node name="Icon" type="AnimatedSprite2D" parent="."]
position = Vector2(9, 7)
scale = Vector2(0.550781, 0.455078)
sprite_frames = SubResource("SpriteFrames_ku1u7")
animation = &"HealthPotion"

[node name="ButtonLeft" type="Button" parent="."]
modulate = Color(1, 1, 1, 0)
offset_left = 2.0
offset_top = 15.0
offset_right = 15.0
offset_bottom = 28.0
metadata/_edit_use_anchors_ = true

[node name="LeftButtonIcon" type="AnimatedSprite2D" parent="."]
position = Vector2(7.76589, 22.7191)
rotation = 1.5708
scale = Vector2(1.32546, 1.3078)
sprite_frames = SubResource("SpriteFrames_v25q5")

[node name="ButtonRight" type="Button" parent="."]
modulate = Color(1, 1, 1, 0)
offset_left = 17.0
offset_top = 15.0
offset_right = 30.0
offset_bottom = 28.0
metadata/_edit_use_anchors_ = true

[node name="RightButtonIcon" type="AnimatedSprite2D" parent="."]
position = Vector2(23, 20)
rotation = -1.5708
scale = Vector2(1.3988, 1.33121)
sprite_frames = SubResource("SpriteFrames_v25q5")

[node name="Coin" type="AnimatedSprite2D" parent="."]
position = Vector2(53, 6)
scale = Vector2(0.425781, 0.363281)
sprite_frames = SubResource("SpriteFrames_rtyyw")
animation = &"Coin"

[node name="Price" type="Label" parent="."]
offset_left = 29.0
offset_top = 1.0
offset_right = 47.0
offset_bottom = 11.0
theme_override_fonts/font = ExtResource("7_5mu2r")
theme_override_font_sizes/font_size = 10
text = "100"
metadata/_edit_use_anchors_ = true

[node name="Label" type="Label" parent="."]
offset_left = 52.0
offset_top = 30.0
offset_right = 88.0
offset_bottom = 53.0

[node name="BuyButtonColor" type="ColorRect" parent="."]
offset_left = 34.0
offset_top = 15.0
offset_right = 59.0
offset_bottom = 26.0
color = Color(1, 0, 0, 0.133333)
metadata/_edit_use_anchors_ = true

[node name="BuyButton" type="Button" parent="."]
modulate = Color(1, 1, 1, 0)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 34.5
offset_top = 16.0
offset_right = 57.5
offset_bottom = 25.0
grow_horizontal = 2
grow_vertical = 2

[connection signal="pressed" from="ButtonLeft" to="." method="_on_button_left_pressed"]
[connection signal="pressed" from="ButtonRight" to="." method="_on_button_right_pressed"]
[connection signal="pressed" from="BuyButton" to="." method="_on_buy_button_pressed"]
